--- a/AUTHORS
+++ b/AUTHORS
@@ -3,65 +3,65 @@ List of xterm.js contributors. Updated before every release.
 7PH <b.raymond@cern.ch>
 7PH <b.raymond@protonmail.com>
 Adrian Labbé <adrilabbelol@gmail.com>
+Agustín Rodríguez <agurz@icloud.com>
 Aleksandr Andrienko <aandrienko@codenvy.com>
 Aleksandr Andriienko <oandriie@redhat.com>
 Alessandro Nadalin <alessandro.nadalin@gmail.com>
+Alex Ross <alros@microsoft.com>
 Alexander Olsson <noseglid@gmail.com>
 Alexandre Petit-Pas <petitpasalexandre@gmail.com>
 Alexey Kontsevoy <alexey@gravitational.com>
 Andres Mejia <amejia004@gmail.com>
 Anish Athalye <me@anishathalye.com>
 Anthony Lapenna <lapenna.anthony@gmail.com>
-Antonin Stefanutti <antonin@stefanutti.fr>
-Antonis Kalipetis <akalipetis@sourcelair.com>
 Anton Skshidlevsky <meefik@gmail.com>
 Anton Yurovskykh <anton.yurovskykh@gmail.com>
+Antonin Stefanutti <antonin@stefanutti.fr>
+Antonis Kalipetis <akalipetis@sourcelair.com>
 Artem Arbatskiy <artyom.arbatskiy@gmail.com>
+Austin Anderson <angerson@google.com>
 Austin Robertson <austinrobertson@gmail.com>
-ayapi <colors.aya@gmail.com>
 Ben Hall <ben@benhall.me.uk>
 Benjamin Fischer <benjamin.fischer@rwth-aachen.de>
 Benjamin Raymond <b.raymond@cern.ch>
 Benjamin Woodruff <github@benjam.info>
 Bill Church <billchurch@users.noreply.github.com>
 Bob Reid <bobreid@Bobs-MacBook-Pro.local>
-bottleofwater <nison.mael+bottleofwater@gmail.com>
 Brandon Bayer <b@bayer.ws>
 Brian Mock <brian@mockbrian.com>
 Bruno Ribeiro <b.m.fernandes.ribeiro@gmail.com>
 Bruno Ribeito <b.m.fernandes.ribeiro@gmail.com>
-Carson Anderson <carson@betterservers.com>
 CHaBou <chabup@delean.fr>
+Carson Anderson <carson@betterservers.com>
 Christian Budde Christensen <budde377@gmail.com>
 Christof Marti <chrmarti@microsoft.com>
 Christopher Jeffrey <chjjeffrey@gmail.com>
-coderaiser <mnemonic.enemy@gmail.com>
 Damien Tournoud <damien@platform.sh>
 Dan Brown <jdanbrown@gmail.com>
+Dan Kaplun <dbkaplun@twitch.tv>
 Daniel Griffen <dagriffe@microsoft.com>
 Daniel Griffen <daniel@griffen.io>
 Daniel Imms <daimms@microsoft.com>
 Daniel Risacher <drisacher@gmail.com>
-Dan Kaplun <dbkaplun@twitch.tv>
 Darin Morrison <freebroccolo@users.noreply.github.com>
-dcylabs <dcylabs@gmail.com>
 Dominik Csapak <d.csapak@proxmox.com>
 Edgar Andrés Margffoy Tuay <andfoy@gmail.com>
 Elliot Saba <staticfloat@gmail.com>
 Exile <exile@chamber.ee>
 Felipe Gasper <felipe@felipegasper.com>
 Felix <30559812+felixse@users.noreply.github.com>
-ficristo <ficristo.work@gmail.com>
+Florian Wesch <fw@dividuum.de>
 Gary Ritchie <gary@rstudio.com>
-hiro-su <h.sugipon@gmail.com>
+Hindol Adhya <hindol.adhya@gmail.com>
+Hindol Adhya <hindol.adhya@microsoft.com>
 Ian Lewis <ianlewis@google.com>
-imoses <ido@twiggle.com>
 InDieTasten <indietasten@gmail.com>
-irokas <akasidiari@inf.uth.gr>
 Jakob Gillich <jakob@gillich.me>
 Jan Kuri <jkuri88@gmail.com>
 Jean Bruenn <himself@jeanbruenn.info>
+Jeff Principe <jepri@microsoft.com>
 Jeff Principe <princjef@gmail.com>
+Jeff Smith <whydoubt@gmail.com>
 Jeremy Danyow <jedanyow@microsoft.com>
 Jianhui Zhao <jianhuizhao329@gmail.com>
 Joao Moreno <jomo@microsoft.com>
@@ -70,11 +70,10 @@ Johannes Zellner <johannes@nebulon.de>
 Jon Austin <jon.i.austin@gmail.com>
 Jon Kohler <jon@nutanix.com>
 Jon Masters <jon.masters@sky.com>
-Jörg Breitbart <jerch@rockborn.de>
 Jose Anton <roke22@gmail.com>
-jpoth <poth.john@gmail.com>
 Justin Luk <jluk@users.noreply.github.com>
 Justin Mecham <justin@mecham.me>
+Jörg Breitbart <jerch@rockborn.de>
 Kirill Merkushev <lanwen@yandex.ru>
 Krasimir Tsonev <krasimir@outset.ws>
 Ledion Bitincka <lbitincka@gmail.com>
@@ -83,7 +82,6 @@ Luca <LucaT1@users.noreply.github.com>
 Lucian Buzzo <lucian.buzzo@gmail.com>
 Lukas Drgon <lukas.drgon@gmail.com>
 Lukas Geiger <lukas.geiger94@gmail.com>
-Maël Nison <nison.mael@gmail.com>
 Marc Dumais <marc.dumais@ericsson.com>
 Marek Libra <mlibra@redhat.com>
 Markus F.X.J. Oberhumer <markus@oberhumer.com>
@@ -92,43 +90,69 @@ Martin Koppehel <martin.koppehel@st.ovgu.de>
 Martin Wang <jiahaow@ca.ibm.com>
 Matt Bierner <matb@microsoft.com>
 Matthew James <matthew.d.james87@gmail.com>
+Maël Nison <nison.mael@gmail.com>
 Michael Irwin <mikesir87@gmail.com>
 Mikko Karvonen <mikko.karvonen@arm.com>
-mofux <t.zilz@mofux.org>
-muji <muji@tmpfs.org>
 Nicolas Ramz <nicolas.ramz@gmail.com>
-npezza93 <npezza93@gmail.com>
+Niklas Higi <niklas@shroudedcode.com>
 Oleksandr Andriienko <oandriie@redhat.com>
-Paris Kasidiaris <pariskasidiaris@gmail.com>
 Paris Kasidiaris <paris@sourcelair.com>
+Paris Kasidiaris <pariskasidiaris@gmail.com>
 Peng Xiao <pengxiao@outlook.com>
 Peter Baumgarten <me@peterbaumgarten.com>
 Philip Olson <philip.olson@protonmail.ch>
 PowerHat <31401273+7PH@users.noreply.github.com>
 PowerHat <b.raymond@protonmail.com>
-pro-src <34285059+pro-src@users.noreply.github.com>
-pro-src <rodneyd.teal@gmail.com>
+Prabhanjan S Koushik <skprabhanjan@gmail.com>
+Qylin <18612116114@163.com>
 Rick Baker <rick@ricktbaker.com>
-runarberg <runar@greenqloud.com>
 Saad Malik <simfox3@gmail.com>
 Samuel Williams <samuel.williams@oriontransfer.co.nz>
 Saswat Das <saswatds@users.noreply.github.com>
 Saul Costa <saul@codevolve.com>
+Sebastian Pfitzner <pfitzseb@physik.hu-berlin.de>
 Segev Finer <segev208@gmail.com>
+Shengdun Hua <webmaster0115@gmail.com>
 Shuanglei Tao <tsl0922@gmail.com>
-sitzmar <sitzmar@gmail.com>
+Stathis Kavros <stathis.kavros@gmail.com>
 Steven Silvester <steven.silvester@ieee.org>
-stuicey <stuicey@users.noreply.github.com>
 Sven-Hendrik Haase <svenstaro@gmail.com>
-t-amqi <umberos@gmail.com>
 Thanasis Daglis <thanasis@sourcelair.com>
-thomas <thomas@kreativkonzentrat.de>
 Thomas Zilz <t.zilz@mofux.org>
 Tine Jozelj <tine.jozelj@outlook.com>
 Tyler Jewell <tjewell@codenvy.com>
 Vincent Woo <me@vincentwoo.com>
 Viraj Sinha <virajosinha@gmail.com>
-yutaka <shigure@refy.net>
+Vladimir Zeifman <edoomik@gmail.com>
+Yuriy Markov <peacefullatom@gmail.com>
 YuviPanda <yuvipanda@gmail.com>
 ZHAO Xudong <zxdong@gmail.com>
+Zane Hitchcox <zwhitchcox@gmail.com>
+ayapi <colors.aya@gmail.com>
+azure-pipelines[bot] <azure-pipelines[bot]@users.noreply.github.com>
+bottleofwater <nison.mael+bottleofwater@gmail.com>
+coderaiser <mnemonic.enemy@gmail.com>
+dcylabs <dcylabs@gmail.com>
+ficristo <ficristo.work@gmail.com>
+hiro-su <h.sugipon@gmail.com>
+imoses <ido@twiggle.com>
+irokas <akasidiari@inf.uth.gr>
+jerch <jerch@rockborn.de>
+jpoth <poth.john@gmail.com>
+jrkong <jrkong.hfd@gmail.com>
+leomoty <leomoty@gmail.com>
+mofux <t.zilz@mofux.org>
+muji <muji@tmpfs.org>
+npezza93 <npezza93@gmail.com>
+peacefullatom <peacefullatom@users.noreply.github.com>
+pkoushik <pkoushik@akamai.com>
+pro-src <34285059+pro-src@users.noreply.github.com>
+pro-src <rodneyd.teal@gmail.com>
+runarberg <runar@greenqloud.com>
+sitzmar <sitzmar@gmail.com>
+stuicey <stuicey@users.noreply.github.com>
+t-amqi <umberos@gmail.com>
+thomas <thomas@kreativkonzentrat.de>
+vladimirze <edoomik@gmail.com>
+yutaka <shigure@refy.net>
 赵雪珂 <zhaoxueke@onething.net>
